fix(components): [upload] keep delete icon visible on focus-within

--- a/packages/theme-chalk/src/upload.scss
+++ b/packages/theme-chalk/src/upload.scss
@@ -235,7 +235,8 @@
       font-style: normal;
     }
 
-    &:hover {
+    &:hover,
+    &:focus-within {
       background-color: getCssVar('fill-color', 'light');
 
       .#{bem('icon', '', 'close')} {
@@ -284,7 +285,8 @@
       }
 
       &:hover,
-      &:focus {
+      &:focus,
+      &:focus-within {
         .#{bem('upload-list', 'item-status-label')} {
           display: none;
           opacity: 0;
